--- a/src/app/features/reviews-productos/reviews-productos.component.html
+++ b/src/app/features/reviews-productos/reviews-productos.component.html
@@ -49,9 +49,9 @@
             }
           </div>
 
-          <button class="w-full border border-gray-900 text-gray-900 font-bold py-3 rounded-xl hover:bg-black hover:text-white transition-colors">
+          <!-- <button class="w-full border border-gray-900 text-gray-900 font-bold py-3 rounded-xl hover:bg-black hover:text-white transition-colors">
             Escribir una reseña
-          </button>
+          </button> -->
         </div>
 
         <!-- COLUMNA 2: LISTA DE COMENTARIOS -->
