--- a/src/app/features/checkout/checkout/checkout.component.html
+++ b/src/app/features/checkout/checkout/checkout.component.html
@@ -114,22 +114,47 @@
                 </h3>
                 <div class="space-y-4">
                   <div>
-                    <input formControlName="name" type="text" placeholder="Nombre Completo" 
-                      class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3.5 focus:ring-2 focus:ring-emerald-500 focus:border-emerald-500 outline-none transition-all placeholder:text-gray-400 text-gray-900"
-                      [class.border-red-300]="checkoutForm.get('datosCliente.name')?.invalid && checkoutForm.get('datosCliente.name')?.touched">
-                      @if(checkoutForm.get('datosCliente.name')?.invalid && checkoutForm.get('datosCliente.name')?.touched) {
-                        <p class="text-red-500 text-xs mt-1 ml-1">Ingresa tu nombre para el envío.</p>
-                      }
+                    <!-- NOMBRE -->
+                      <div class="group">
+                          <input formControlName="name" type="text" placeholder="Nombre Completo"
+                                class="w-full bg-white border border-gray-200 text-gray-900 text-base rounded-xl px-4 py-3.5 outline-none focus:border-emerald-500 focus:ring-4 focus:ring-emerald-500/10 transition-all placeholder:text-gray-300"
+                                [class.border-red-300]="checkoutForm.get('datosCliente.name')?.invalid && checkoutForm.get('datosCliente.name')?.touched">
+                          
+                          @if(checkoutForm.get('datosCliente.name')?.invalid && checkoutForm.get('datosCliente.name')?.touched) {
+                            <span class="text-red-500 text-[10px] font-bold mt-1 pl-1 block animate-in fade-in slide-in-from-top-1">
+                              Ingresa tu nombre completo
+                            </span>
+                          }
+                      </div>
                   </div>
-                  <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <input formControlName="email" type="email" placeholder="Correo Electrónico" 
-                      class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3.5 focus:ring-2 focus:ring-emerald-500 outline-none transition-all">
-                    <div>
-                      <input formControlName="phone" type="tel" placeholder="Celular (9 dígitos)" 
-                        class="w-full bg-white border border-gray-200 rounded-xl px-4 py-3.5 focus:ring-2 focus:ring-emerald-500 outline-none transition-all"
-                        [class.border-red-300]="checkoutForm.get('datosCliente.phone')?.invalid && checkoutForm.get('datosCliente.phone')?.touched">
-                    </div>
-                  </div>
+                  <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
+                        <!-- EMAIL -->
+                        <div class="group">
+                          <input formControlName="email" type="email" placeholder="Correo Electrónico" 
+                                 class="w-full bg-white border border-gray-200 text-gray-900 text-base rounded-xl px-4 py-3.5 outline-none focus:border-emerald-500 focus:ring-4 focus:ring-emerald-500/10 transition-all placeholder:text-gray-300"
+                                 [class.border-red-300]="checkoutForm.get('datosCliente.email')?.invalid && checkoutForm.get('datosCliente.email')?.touched">
+                          
+                          @if(checkoutForm.get('datosCliente.email')?.invalid && checkoutForm.get('datosCliente.email')?.touched) {
+                             <span class="text-red-500 text-[10px] font-bold mt-1 pl-1 block animate-in fade-in slide-in-from-top-1">
+                               Correo inválido
+                             </span>
+                          }
+                        </div>
+                        
+                        <!-- CELULAR -->
+                        <div class="group">
+                          <input formControlName="phone" type="tel" placeholder="Celular (9 dígitos)" 
+                                 class="w-full bg-emerald-50/50 border border-emerald-100 p-4 rounded-xl focus:bg-white focus:ring-2 focus:ring-emerald-500 focus:border-transparent outline-none transition-all font-bold text-gray-900 placeholder:font-normal placeholder:text-gray-400"
+                                 [class.border-red-300]="checkoutForm.get('datosCliente.phone')?.invalid && checkoutForm.get('datosCliente.phone')?.touched"
+                                 [class.text-red-600]="checkoutForm.get('datosCliente.phone')?.invalid && checkoutForm.get('datosCliente.phone')?.touched">
+                          
+                          @if(checkoutForm.get('datosCliente.phone')?.invalid && checkoutForm.get('datosCliente.phone')?.touched) {
+                             <span class="text-red-500 text-[10px] font-bold mt-1 pl-1 block animate-in fade-in slide-in-from-top-1">
+                               Ingresa 9 dígitos válidos
+                             </span>
+                          }
+                        </div>
+                     </div>
                 </div>
               </div>
 
@@ -497,7 +522,7 @@
             </div>
 
             <!-- CTA WHATSAPP -->
-            <a [href]="'https://wa.me/51999999999?text=Hola, acabo de hacer el pedido a nombre de ' + confirmedOrderData().cliente.name" target="_blank"
+            <a [href]="'https://wa.me/51929109810?text=Hola, acabo de hacer el pedido a nombre de ' + confirmedOrderData().cliente.name + ' con COD:  '+ confirmedOrderData().codigoPedido" target="_blank"
                class="w-full bg-[#25D366] hover:bg-[#1DA851] text-white font-bold py-5 rounded-2xl shadow-lg shadow-green-200/50 hover:shadow-green-300/50 transition-all transform hover:-translate-y-1 flex items-center justify-center gap-3 group mb-12">
                <svg class="w-6 h-6 group-hover:scale-110 transition-transform" fill="currentColor" viewBox="0 0 24 24"><path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.587-5.946.003-6.556 5.338-11.891 11.893-11.891 3.181.001 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.48 8.414-.003 6.557-5.338 11.892-11.893 11.892-1.99-.001-3.951-.5-5.688-1.448l-6.305 1.654zm6.597-3.807c1.676.995 3.276 1.591 5.392 1.592 5.448 0 9.886-4.434 9.889-9.885.002-5.462-4.415-9.89-9.881-9.892-5.452 0-9.887 4.434-9.889 9.884-.001 2.225.651 3.891 1.746 5.634l-.999 3.648 3.742-.981zm11.387-5.464c-.074-.124-.272-.198-.57-.347-.297-.149-1.758-.868-2.031-.967-.272-.099-.47-.149-.669.149-.198.297-.768.967-.941 1.165-.173.198-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372-.272.297-1.04 1.017-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414z"/></svg>
                Contactar por WhatsApp para seguimiento.
