--- a/src/app/shared/components/catalogo-comun/catalogo-comun/catalogo-comun.component.html
+++ b/src/app/shared/components/catalogo-comun/catalogo-comun/catalogo-comun.component.html
@@ -55,18 +55,18 @@
           <div class="flex gap-4 items-center">
             <div class="w-16 h-16 bg-gray-100 rounded-lg overflow-hidden shrink-0">
                <!-- Usa placeholder si no hay imagen -->
-               <img src="assets/images/pelota.jpg" class="w-full h-full object-cover group-hover:scale-110 transition-transform">
+               <img src="assets/images/Maquinas Profesionales/1.webp" class="w-full h-full object-cover group-hover:scale-110 transition-transform">
             </div>
             <div>
-              <p class="text-sm font-bold text-gray-900 leading-tight group-hover:text-emerald-600 transition-colors line-clamp-2">Pack Esencial Hogar</p>
-              <p class="text-xs text-emerald-600 font-bold mt-1">S/ 89.00</p>
+              <p class="text-sm font-bold text-gray-900 leading-tight group-hover:text-emerald-600 transition-colors line-clamp-2">Máquina Profesional Mascarillas Faciales Naturales Colageno Frutas Verduras | Pack Completo</p>
+              <p class="text-xs text-emerald-600 font-bold mt-1">S/ 289.00</p>
             </div>
           </div>
         </div>
 
         <!-- 2. BANNER DE OFERTA (Visual) -->
         <div class="relative rounded-2xl overflow-hidden aspect-[4/5] group cursor-pointer">
-          <img src="https://images.unsplash.com/photo-1548767797-d8c844163c4c?q=80&w=600&auto=format&fit=crop" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Oferta">
+          <img src="assets/images/Maquinas Profesionales/principal.webp" class="absolute inset-0 w-full h-full object-cover transition-transform duration-700 group-hover:scale-110" alt="Oferta">
           <div class="absolute inset-0 bg-black/40 group-hover:bg-black/30 transition-colors"></div>
           
           <div class="absolute bottom-0 left-0 w-full p-6 text-white">
